# libra-agent

./: .dockerignore  .env.docker.example  .env.example  .env.prod.example  .gitignore  Dockerfile  NOTICE  README.md  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-ec2.yml  deploy.yml
benchmarks/: README.md  profiles.yaml  stock_universe.yaml
benchmarks/scenarios/: 01_quiet_routine.yaml  02_semiconductor_concentration.yaml  03_positive_disclosure.yaml  04_negative_news.yaml  05_target_drift_rebalance.yaml  06_high_execution_cost.yaml  07_policy_violation.yaml  08_tax_loss_harvest.yaml  09_esg_conflict.yaml  10_macro_shock.yaml
contracts/: README.md  judge-run-request.schema.json  user-approval-response.schema.json
docs/: README.md  THIRD_PARTY_LICENSES.md  agent-core-domain-integration.md  backtest-replay-runbook.md  ingest-job-contract.md  local-demo.md  run-events.md
docs/architecture/: libra-agent-detailed-design.md  libra-v1-governance-runtime.md  seven-agent-merge-design.md
docs/deployment/: ec2-rds-s3.md
docs/handoff/: 2026-05-08-team-progress-summary.md
docs/implementation/: agent-work-items.md
docs/integration/: local-docker-stack.md  repo-boundaries.md  spring-boot-agent-boundary.md
docs/meetings/2026-05-08/: LIBRA_2026-05-08_professor_meeting.pptx  LIBRA_2026-05-08_professor_meeting_imagegen.pptx  README.md  build_meeting_deck.js  demo-script.md  meeting-brief.md  qa-defense.md  requirements-spec.md  team-integration-plan.md  verification-plan.md
docs/specs/: libra-scenarios-spec-v1.md
examples/: README.md  events.sample.json  kis_devlp.template.yaml  normalized-documents.sample.json  portfolio.sample.json
examples/agent-responses/: README.md  cost.sample.json  disclosure.sample.json  news.sample.json  profit.sample.json  report.sample.json
infra/caddy/: Caddyfile
logs/: test_log_2026-04-26.md  test_result_2026-04-26.md
outputs/: README.md
scenario_harness/: .gitignore  build_caches.py  harness.py  scenarios.json
scripts/: README.md  analyze_rebalance_cases.py  audit_replay_agent_evidence.py  dart_pipeline_agentic.py  ec2-bootstrap.sh  enrich_fixture_with_kis_ohlcv.py  evaluate_replay_strategies.py  kis_paper_buy.py  news_agent.py  orchestrator.py  prepare-local-docker-data.ps1  replay_full_committee_backtest.py  run-agent-api-demo.ps1  run-live-e2e.ps1  run-local-judge.ps1  run_benchmark.py  run_placebo_distribution.py  start-agent-api.ps1  start-claude-committee-full-replay.ps1  start-supergemma-llama.ps1  test_judge_thirteen.py  test_news_pipeline.py  test_seven_agents.py  verify_cadence_budget.py
src/libra_agent/: __init__.py  anthropic_client.py  config.py  errors.py  gemini_client.py  ingest_bundle.py  libra_api.py  libra_cli.py  libra_graph.py  libra_models.py  libra_runtime.py  libra_store.py  libra_validation.py  llama_cpp_client.py  main.py  ollama_client.py  utils.py
src/libra_agent/api/: routes.py  sse.py
src/libra_agent/common/: correlation.py  errors.py  logging.py
src/libra_agent/contracts/: __init__.py  ingest_jobs.py  run_events.py
src/libra_agent/domain_agents/: __init__.py  (+12 more)
tests/: conftest.py  test_agent_routes_contract.py  test_agent_sse_e2e.py  test_anthropic_client.py  test_backtest_replay_options.py  test_benchmark_scenarios.py  test_checkpointer_integration.py  test_domain_context_adapter.py  test_gemini_client.py  test_health.py  test_ingest_job_contract.py  test_knowledge_adapters.py  test_knowledge_reader.py  test_libra_agent_api.py  test_libra_agentic_runtime.py  test_libra_api_errors.py  test_libra_backend_config.py  test_libra_handoff_examples.py  test_libra_individual_agents.py  test_libra_kis_portfolio.py  test_libra_schema_validation.py  test_libra_v1_governance.py  test_libra_week2_asymmetric_routing.py  test_live_e2e.py  test_llm_router_policy.py  test_resume_flow.py  test_run_events_contract.py  test_sse_error_events.py
tests/scenarios/: README.md
(+64 files in other folders)
