[project]
name = "libra-agent"
version = "0.1.0"
description = "Libra 멀티에이전트 의사결정 거버넌스 — LangGraph + FastAPI agent server"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",

    # Schema / settings
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # LangGraph + checkpointer
    "langgraph>=0.2.55",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",

    # LLM
    "anthropic>=0.42",

    # Logging
    "structlog>=24.4",

    # HTTP (downstream / S3 보조)
    "httpx>=0.27",

    # AWS (S3 보고서)
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libra_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
